[gd_scene load_steps=3 format=3 uid="uid://b5lpqwesgus4"]

[ext_resource type="Script" path="res://addons/criss-cross/editor/update_button.gd" id="1_8ury3"]
[ext_resource type="PackedScene" uid="uid://6pmddcctde0v" path="res://addons/criss-cross/editor/download_update_panel.tscn" id="2_bw0il"]

[node name="UpdateButton" type="Button"]
visible = false
text = "Criss-Cross v1.0.0 available"
flat = true
script = ExtResource("1_8ury3")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="DownloadDialog" type="AcceptDialog" parent="."]
title = "Update available!"
size = Vector2i(400, 320)
unresizable = true
min_size = Vector2i(300, 310)
ok_button_text = "Close"

[node name="DownloadUpdatePanel" parent="DownloadDialog" instance=ExtResource("2_bw0il")]
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="UpdateFailedDialog" type="AcceptDialog" parent="."]
size = Vector2i(381, 100)
dialog_text = "There was a problem downloading the update."

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="failed" from="DownloadDialog/DownloadUpdatePanel" to="." method="_on_download_update_panel_failed"]
[connection signal="updated" from="DownloadDialog/DownloadUpdatePanel" to="." method="_on_download_update_panel_updated"]
